Removed local user guide. Now uses github website version

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -94,7 +94,7 @@
                     </div>
 
 
-                    <a href="/help/user-guide.html?section=admin-panel" target="_blank"><button>User Guide</button></a>
+                    <a href="https://coastie-uk.github.io/convention-auction/user-guide.html#admin-panel" target="_blank"><button>User Guide</button></a>
                     <div class="dropdown user-menu-dropdown">
                         <button id="admin-user-menu-button" class="user-menu-button">User</button>
                         <div class="dropdown-content user-menu-content">
