--- a/public/cashier/index.html
+++ b/public/cashier/index.html
@@ -54,7 +54,7 @@
     <!-- <label for="settle-select">Settlement & Payment Panel:</label>
     <select id="settle-select"></select> -->
     <button id="open-settle" disabled>Manage payments</button>
-    <a href="/help/user-guide.html?section=cashier-panel" target="_blank"><button>User guide</button></a>
+    <a href="https://coastie-uk.github.io/convention-auction/user-guide.html#cashier-panel" target="_blank"><button>User guide</button></a>
     <div class="dropdown user-menu-dropdown">
       <button id="cashier-user-menu-button" class="user-menu-button">User</button>
       <div class="dropdown-content user-menu-content">
