--- a/public/maint/index.html
+++ b/public/maint/index.html
@@ -26,7 +26,7 @@
       <h1>Maintenance Panel</h1>
       <p id="software-version" style="margin-top:5px; color:#666;"></p>
       <div class="top-actions">
-        <a href="/help/user-guide.html?section=maintenance-panel" target="_blank"><button>User guide</button></a>
+        <a href="https://coastie-uk.github.io/convention-auction/user-guide.html#maintenance-panel" target="_blank"><button>User guide</button></a>
 
         <div class="user-menu-dropdown">
                         <button>Other pages</button>
