feat: update slip configuration and enhance printing functionality. Now supports printing all item slips or only the stale ones.
- Adjusted paper width in slip configuration from 80mm to 72mm for better compatibility.
- Enhanced admin interface with additional print options for item slips.
- Implemented new functions for printing slips, including confirmation prompts and batch printing capabilities.
- Added new API endpoints for batch slip printing and confirming print status.
- Updated software design documentation to reflect new printing features and API changes.
- Expanded backend tests to cover new printing functionalities and ensure proper error handling.

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -74,9 +74,12 @@
                     <div class="dropdown">
                         <button>Export</button>
                         <div class="dropdown-content">
-                            <button id="export-csv">Generate CSV Export</button>
-                            <button id="generate-ppt">Generate Auction Slides</button>
-                            <button id="generate-cards">Generate Item Cards</button>
+                            <button id="export-csv">Export Data (CSV)</button>
+                            <button id="generate-ppt">Generate Auction Slides (PPTX)</button>
+                            <button id="generate-cards">Generate Item Cards (PPTX)</button>
+                            <button id="print-all-slips">Print All Item Slips (PDF)</button>
+                            <button id="print-needs-print-slips">Print Unprinted/Out-of-date Slips (PDF)</button>
+                            <button id="reset-slip-print-tracking">Reset Slip Print Tracking</button>
                         </div>
                     </div>
 
